tree-sitter-terlan/grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.module_declaration,
        $.import_declaration,
        $.annotation,
        $.constant_declaration,
        $.const_function_declaration,
        $.type_declaration,
        $.shape_declaration,
        $.struct_declaration,
        $.trait_declaration,
        $.impl_declaration,
        $.template_declaration,
        $.template_element,
        $.interpolation,
        $.function_declaration,
        $.constructor_declaration,
        $.config_declaration
      ),

    module_declaration: ($) =>
      seq("module", field("name", $.qualified_identifier), "."),

    type_declaration: ($) =>
      seq(
        optional($.pub_keyword),
        optional("opaque"),
        "type",
        field("name", $.type_identifier),
        optional($.type_parameters),
        optional(choice(
          seq("=", field("body", $.type_expression)),
          seq(
            ":",
            field("representation", $.type_expression),
            "=",
            sep1($.valued_union_arm, "|")
          )
        )),
        "."
      ),

    impl_declaration: ($) =>
      choice(
        seq(
          optional($.pub_keyword),
          "impl",
          "not",
          field("trait", $._name_ref),
          "[",
          field("target", $.type_expression),
          "]",
          "."
        ),
        seq(
          optional($.pub_keyword),
          "impl",
          field("trait", $.impl_trait_ref),
          "for",
          field("target", $.type_expression),
          "{",
          repeat(choice($.impl_constant_declaration, $.function_declaration)),
          "}",
          "."
        )
      ),

    impl_trait_ref: ($) =>
      seq(
        $._type_name_ref,
        optional(
          seq(
            "[",
            commaSep1(choice($.type_expression, $.implication_type_parameter)),
            "]"
          )
        )
      ),

    function_declaration: ($) =>
      prec.right(
        1,
        seq(
          repeat($.annotation),
          optional($.pub_keyword),
          optional($.receiver),
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameters,
        optional(seq(":", $.type_expression)),
        optional($.guard_clause),
        "->",
        $.expression,
        "."
      )
      ),

    parameters: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    type_parameters: ($) => seq("[", commaSep1($._type_parameter), "]"),

    _type_parameter: ($) =>
      choice($.type_identifier, $.const_type_parameter, $.implication_type_parameter),

    implication_type_parameter: ($) =>
      seq($.type_identifier, "=>", $.structural_evidence_shape),

    structural_evidence_shape: ($) =>
      seq("{", commaSep1($.implication_field), "}"),

    implication_field: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._implication_type)),

    _implication_type: ($) =>
      choice($.structural_evidence_shape, $.type_expression),

    type_expression: ($) =>
      choice(
        $.type_identifier,
        $.qualified_identifier,
        $.generic_type,
        $.tuple_type,
        $.function_type,
        $.atom_type
      ),

    generic_type: ($) => seq($._type_name_ref, "[", commaSep1($.type_expression), "]"),

    tuple_type: ($) => seq("{", optional(commaSep1($.type_expression)), "}"),

    expression: ($) =>
      choice(
        $.let_expression,
        $.case_expression,
        $.if_expression,
        $.lambda_expression,
        $.binary_layout_expression,
        $.list_expression,
        $.remote_call_expression,
        $.method_call_expression,
        $.call_expression,
        $.field_expression,
        $.cast_expression,
        $.unary_expression,
        $.binary_expression,
        $.raw_macro_expression,
        $.interpolation,
        $.identifier,
        $.type_identifier,
        $.number,
        $.string,
        $.atom_literal,
        seq("(", $.expression, ")")
      ),

    list_expression: ($) =>
      seq(
        "[",
        optional(choice($.list_comprehension_body, $.list_cons_body, commaSep1($.expression))),
        "]"
      ),

    list_comprehension_body: ($) =>
      seq(
        field("yield", $.expression),
        "|",
        $.comprehension_generator,
        repeat(seq(",", $.comprehension_clause))
      ),

    list_cons_body: ($) =>
      seq(field("head", $.expression), "|", field("tail", $.expression)),

    comprehension_clause: ($) =>
      choice($.comprehension_generator, $.comprehension_filter),

    comprehension_generator: ($) =>
      seq(field("pattern", $.pattern), "<-", field("source", $.expression)),

    comprehension_filter: ($) => field("filter", $.expression),

    call_expression: ($) => seq($._name_ref, $.arguments),

    cast_expression: ($) => prec.left(3, seq($.expression, "as", $.type_expression)),

    binary_expression: ($) =>
      prec.left(
        1,
        seq(
          $.expression,
          choice(
            "+",
            "-",
            "*",
            "/",
            "div",
            "rem",
            "==",
            "!=",
            ">=",
            "<=",
            ">",
            "<",
            "in",
            "..",
            "and",
            "or",
            "|>"
          ),
          $.expression
        )
      ),

    arguments: ($) => seq("(", optional(commaSep1($.argument)), ")"),

    argument: ($) => choice($.expression, seq($.identifier, "=", $.expression)),

    pattern: ($) =>
      choice(
        $.string_pattern,
        $.tuple_pattern,
        $.list_pattern,
        $.map_pattern,
        $.record_pattern,
        $.binary_layout_pattern,
        $.constructor_pattern,
        $.identifier,
        $.type_identifier,
        $.private_field_identifier,
        $.atom_literal,
        "_",
        $.number,
        $.string
      ),

    qualified_identifier: () =>
      token(
        choice(
          /([a-z_][A-Za-z0-9_]*\.)+[A-Z][A-Za-z0-9_]*(\.[A-Za-z_][A-Za-z0-9_]*)*/,
          /[A-Z][A-Za-z0-9_]*(\.[A-Za-z_][A-Za-z0-9_]*)+/
        )
      ),

    _name_ref: ($) => choice($.qualified_identifier, $.identifier, $.type_identifier),

    _type_name_ref: ($) => choice($.qualified_identifier, $.type_identifier),

    identifier: () => token(prec(-1, /[a-z_][A-Za-z0-9_]*/)),

    type_identifier: () => /[A-Z][A-Za-z0-9_]*/,

    number: () => /[0-9]+(\.[0-9]+)?([eE][+-]?[0-9]+)?/,

    line_comment: () => token(seq("//", /.*/)),
